Subida de imagenes al proyecto, borrado y modificacion parcial de imágenes